--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "eslint": "^8.38.0"
   }
 }
