--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es6": true,
-    "jest": true
+    "jest": true,
+    "SKIP_PREFLIGHT_CHECK": true
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
