--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
   "env": {
     "browser": true,
     "es6": true,
-    "jest": true,
-    "SKIP_PREFLIGHT_CHECK": true
+    "jest": true
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -22,14 +21,6 @@
     "import/extensions": "off",
     "no-shadow": "off"
   },
-  "overrides": [
-    {
-       // feel free to replace with your preferred file pattern - eg. 'src/**/*Slice.js' or 'redux/**/*Slice.js'
-      "files": ["src/**/*Slice.js"],
-      // avoid state param assignment
-      "rules": { "no-param-reassign": ["error", { "props": false }] }
-    }
-  ],
   "ignorePatterns": [
     "dist/",
     "build/"
